--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,16 @@
 name: Boat
-version: '${project.version}'
+version: '1.0-SNAPSHOT'
 main: com.space.boat.Boat
 api-version: 1.18
 authors: [ LanStarD ]
 description: A simple plugins
-depend: [ProtocolLib]
+#depend: [ItemsAdder]
 commands:
   yboat:
     description: All command for server
     permission: yboat.all
     usage: /yboat help
+  research:
+    description: All command for research
+    permission: yboat.research
+    usage: /research help
